<resources>
    <string name="app_name">BopIt</string>

    <string name="a">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</string>

    <string name="proto">prototipo alpha 0.0</string>
    <string name="game_text">Jugar</string>
    <string name="about_text">Acerca de</string>
    <string name="config_text">Configuraciones</string>
    <string name="stop">Detener/reproducir cancion</string>
    <string name="yippie">Yippie</string>
    <string name="uaaugh">Uaaughh</string>

    <string name="click">Aprieta</string>
    <string name="swipe">Desliza</string>
    <string name="holds">Mantiene</string>
    <string name="shake">Agita</string>

    <string name="about">Este programa ha sido desarrollado por Vicente Villavicencio
    de IDVRV en la universidad de talca
    consiste en una version basica del juego
    para fiestas "bopit"</string>


    <string name="Preference1">Datos del jugador</string>

    <string name="Nombre_Usuario">Nombre Usuario</string>
    <string name="Max_score">Puntaje mas alto</string>
    <string name="Score">0</string>


    <string name="Preference2">Personalización del juego</string>

    <string name="Tema_app">Tema de la app</string>
    <string name="Volumen_app">Nivel de volumen de la app</string>
    <string name="Instructions">Instrucciones disponibles</string>
    <string name="Letra_app">Tamaño de letra</string>


    <string name="Preference3">Administración general</string>

    <string name="Restart_config">Reiniciar preferencias</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>