<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="176dp"
        android:layout_height="58dp"
        android:text="@string/proto"
        android:textColor="#F1E6E6"
        android:textSize="14sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552" />

    <Button
        android:id="@+id/buttonA"
        android:layout_width="171dp"
        android:layout_height="85dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="7dp"
        android:text="@string/about_text"
        app:layout_constraintBottom_toTopOf="@+id/buttonC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonG"
        android:layout_width="171dp"
        android:layout_height="85dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="104dp"
        android:text="@string/game_text"
        app:layout_constraintBottom_toTopOf="@+id/buttonC"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="171dp"
        android:layout_height="85dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="200dp"
        android:text="@string/config_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="413dp"
        android:layout_height="367dp"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="51dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/bopit_foreground" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="17dp"
        android:text="@string/stop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/yippieButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="19dp"
        android:text="@string/yippie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/screamButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-110dp"
        android:layout_marginBottom="-45dp"
        android:text="@string/uaaugh"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>